# Algo-Trading-Strategy

./: README.md  main.py  pyproject.toml  requirements.txt
algo_trading/: __init__.py
algo_trading/config/: settings.py
algo_trading/dashboard/: streamlit_app.py
algo_trading/data/: kite_data.py
algo_trading/engines/: backtest_engine.py  execution_engine.py  trading_engines.py
algo_trading/models/: core.py
algo_trading/risk/: risk_manager.py
algo_trading/selector/: strategy_selector.py
algo_trading/strategies/: __init__.py  base.py  options_strategies.py
algo_trading/utils/: indicators.py  reporting.py  strike_selector.py
tests/: test_selector_and_risk.py
